--- a/src/SemanticLogging.Elasticsearch/SemanticLogging.Elasticsearch.csproj
+++ b/src/SemanticLogging.Elasticsearch/SemanticLogging.Elasticsearch.csproj
@@ -27,11 +27,11 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\..\bin\Release\</OutputPath>
+    <OutputPath>..\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\..\..\bin\Release\FullScale180.SemanticLogging.Elasticsearch.xml</DocumentationFile>
+    <DocumentationFile>..\bin\Release\FullScale180.SemanticLogging.Elasticsearch.xml</DocumentationFile>
     <CodeAnalysisRuleSet>..\..\EnterpriseLibrary.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
